# BinaxEngine

./: Brief Description.txt  CMakeLists.txt  CREDITS.txt  LICENSE  README.md  ThirdPartyLicenses.txt  gui.ini  main.cpp
Animation/: Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationComponent.cpp  AnimationComponent.h  AnimationKeyframe.cpp  AnimationKeyframe.h
Audio/: AudioEngine.cpp  AudioEngine.h
Editor/: EditorTheme.h  EditorUI.cpp  EditorUI.h
Graphics/: Material.h  Mesh.h  Model.cpp  Model.h  Primitives.cpp  Primitives.h  Shader.h  Skybox.cpp  Skybox.h
Input/: InputManager.cpp  InputManager.h
Physics/: PhysicsWorld.cpp  PhysicsWorld.h
Scene/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h  GameObject.cpp  GameObject.h  LuaScriptComponent.cpp  LuaScriptComponent.h  SceneManager.cpp  SceneManager.h
Script/: ScriptManager.cpp  ScriptManager.h
assets/shaders/: basic.frag  basic.vert  depth.frag  depth.vert  gizmo.frag  gizmo.vert  grid.frag  shaft.frag  shaft.vert
resources/: binax_engine.rc
scripts/: test_scripts.lua
src/: main.cpp
src/Audio/: AudioEngine.cpp  AudioEngine.h
src/Editor/: EditorUI.cpp  EditorUI.h
src/Graphics/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp
src/Scene/: GameObject.cpp  GameObject.h  SceneManager.cpp  SceneManager.h
